--- a/Contact.html
+++ b/Contact.html
@@ -7,30 +7,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            fontFamily: {
-              'Candara': ['Candara', 'sans-serif']
-            }
-          }
+        tailwind.config = {
+          darkMode: 'class',
         }
-      }
     </script>
     <style type="text/tailwindcss">
         @layer components {
-          .mycolor {
-              background: linear-gradient(90deg, #5400FF, #8453DA);
-          }
-
-          .btn {
-              @apply px-6 py-3 rounded-full font-bold text-white bg-gradient-to-r from-purple-600 to-indigo-600 shadow-lg;
-          }
-
-          .zoom {
-              @apply transition-all duration-300 ease-out hover:scale-110 hover:shadow-2xl hover:from-purple-700 hover:to-indigo-700;
-          }
+            .btn {
+                @apply px-6 py-3 rounded-full font-bold text-white bg-gradient-to-r from-purple-600 to-indigo-600 shadow-lg;
+            }
+            .zoom {
+                @apply transition-all duration-300 ease-out hover:scale-110 hover:shadow-2xl hover:from-purple-700 hover:to-indigo-700;
+            }
         }
     </style>
 </head>
@@ -51,76 +39,98 @@
             </div>
 
             <ul class="hidden md:flex space-x-8 text-lg font-bold">
-                <li><a href="home.html" class="hover:text-purple-600">Home</a></li>
+                <li><a href="Home.html" class="hover:text-purple-600">Home</a></li>
                 <li><a href="Products.html" class="hover:text-purple-600">Products</a></li>
                 <li><a href="Service.html" class="hover:text-purple-600">Services</a></li>
                 <li><a href="Contact.html" class="hover:text-purple-600">Contact</a></li>
             </ul>
             <div class="flex gap-10">
                 <a href="Cart.html"><i class="fa-solid fa-cart-shopping text-2xl hover:text-purple-600 zoom"></i></a>
-                <a href="#"><i class="fa-solid fa-circle-user text-2xl hover:text-purple-600 zoom"></i></a>
+                <a href="Account.html"><i class="fa-solid fa-circle-user text-2xl hover:text-purple-600 zoom"></i></a>
             </div>
             <button id="themeToggle" class="text-xl px-3">🌓︎</button>
         </nav>
     </header>
 
-    <section id="home" class="bg-white dark:bg-gray-700">
+    <section class="bg-white dark:bg-gray-700">
       <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-60 items-center px-6 py-16">
-
-        <img src="Images/Contact/human.png" alt="Gaming Chair" class="mx-auto max-h-96"/>
+        <!-- left -->
+        <img src="Images/Contact/human.png" alt="" class="mx-auto max-h-96"/>
+        <!-- right -->
         <div>
           <h1 class="text-3xl md:text-4xl font-bold mb-4">Want Gaming Accessories ?<br/>Contact Us Now !</h1>
-          <p class="text-lg mb-6 text-gray-600 dark:text-gray-400">
-            Have a question or need support? Contact us anytime for product
+          <p class="text-lg mb-6 text-gray-600 dark:text-gray-400">Have a question or need support? Contact us anytime for product
             inquiries, service requests, or assistance with your order.
           </p>
           <div class="space-y-2 text-lg">
-            <p>📍 Russian Federation Blvd (110), Phnom Penh</p>
-            <p>📞 +855 71 772 9859</p>
+              <p>📍 Russian Federation Blvd (110), Phnom Penh</p>
+              <p>📞 +855 71 772 9859</p>
           </div>
-          <button id="callBtn" class="mt-6 hover:bg-purple-700 text-white px-6 py-2 btn zoom">Call Now</button>
+          <button class="mt-6 hover:bg-purple-700 text-white px-6 py-2 btn zoom">Call Now</button>
         </div>
       </div>
     </section>
 
-    <footer id="contact" class="bg-gray-100 dark:bg-gray-800 pt-14 pb-8">
-      <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-10 px-6">
+    <footer class="bg-gray-100 dark:bg-gray-800 pt-14 pb-8">
+      <!--contact footer-->
+      <div class="max-w-7xl mb-16 mx-auto grid md:grid-cols-3 gap-10 px-6">
         <div>
           <h3 class="text-purple-600 font-bold mb-4 text-4xl">Menu</h3>
-          <ul class="grid grid-cols-2 gap-2 space-y-2 text-lg">
-            <li>Home</li>
-            <li>About</li>
-            <li>Products</li>
-            <li>Services</li>
-            <li>Shop</li>
-            <li>Blog Post</li>
-            <li>Package</li>
-            <li>Contact</li>
-          </ul>
+            <ul class="grid grid-cols-2 gap-2 text-lg">
+                <li>Home</li>
+                <li>About</li>
+                <li>Products</li>
+                <li>Services</li>
+                <li>Shop</li>
+                <li>Blog Post</li>
+                <li>Package</li>
+                <li>Contact</li>
+            </ul>
         </div>
 
         <div>
           <h3 class="text-purple-600 font-bold mb-4 text-4xl">Products</h3>
-          <ul class="grid grid-cols-2 gap-2 space-y-2 text-lg">
-            <li>Monitor</li>
-            <li>Headset</li>
-            <li>Mouse</li>
-            <li>Keyboard</li>
-            <li>Speaker</li>
-            <li>Gaming Chair</li>
-          </ul>
+            <ul class="grid grid-cols-2 gap-2 text-lg">
+                <li>Monitor</li>
+                <li>Headset</li>
+                <li>Mouse</li>
+                <li>Keyboard</li>
+                <li>Speaker</li>
+                <li>Gaming Chair</li>
+            </ul>
         </div>
 
         <div>
-          <h3 class="text-purple-600 font-bold mb-4 text-4xl">Reach Us</h3>
-          <input type="email" placeholder="Enter your email" class="w-full mb-3 px-4 py-2 rounded bg-white dark:bg-gray-700 outline-none"/>
-          <textarea placeholder="Your message" class="w-full mb-3 px-4 py-2 rounded bg-white dark:bg-gray-700 outline-none"></textarea>
-          <button id="sendBtn"class="btn zoom px-6 py-2">Send</button>
+            <h3 class="text-purple-600 font-bold mb-4 text-4xl">Reach Us</h3>
+            <input type="email" placeholder="Enter your email" class="w-full mb-3 px-4 py-2 rounded bg-white dark:bg-gray-700 outline-none"/>
+            <textarea placeholder="Your message" class="w-full mb-3 px-4 py-2 rounded bg-white dark:bg-gray-700 outline-none"></textarea>
+            <button id="sendBtn"class="btn zoom px-6 py-2">Send</button>
         </div>
       </div>
+      <!--Main footer-->
+      <div class="w-full mx-auto px-6 flex flex-col items-center justify-between space-y-4 md:space-y-0">
+            <div>
+                <img src="/Images/logo.png" alt="Logo VT" class="w-20">
+            </div>
+                <ul class="flex flex-cols dark:text-white font-bold text-lg lg:text-3xl py-4 gap-4 lg:gap-10 justify-center flex-wrap">
+                    <li>MAIN</li>
+                    <li>PRODUCTS</li>
+                    <li>BLOG</li>
+                    <li>SHOP</li>
+                    <li>CONTACTS</li>
+                </ul>
+            <div class="w-full h-px bg-gray-400 my-4"></div>
+
+            <div class="flex items-center space-x-4 text-lg"><span>© 2025 VTStore</span></div>
+            
+            <div class="flex space-x-4 text-sm text-gray-600 dark:text-white"><span>|</span>
+                <a href="#" class="hover:text-purple-600">Terms of Service</a><span>|</span>
+                <a href="#" class="hover:text-purple-600">FAQ</a><span>|</span>
+                <a href="#" class="hover:text-purple-600">Support</a>
+            </div>
+        </div>
     </footer>
     <script>
-      // Dark mode 
           const btn = document.getElementById('themeToggle');
 
           btn.addEventListener('click', () => {
@@ -128,29 +138,11 @@
             btn.textContent =
               document.documentElement.classList.contains('dark') ? '🌓︎' : '🌓︎';
           });
-
-          // Search input
-          document.getElementById('searchInput')?.addEventListener('input', (e) => {
-            console.log('Searching:', e.target.value);
-          });
-
-          // Call button
-          document.getElementById('callBtn').addEventListener('click', () => {
-            alert('Calling +855 71 772 9859');
-          });
+          if (localStorage.getItem("theme") === "dark") { document.documentElement.classList.add("dark"); }
 
           // Send message
-          document.getElementById('sendBtn').addEventListener('click', () => {
-            alert('Message sent!');
-          });
+          document.getElementById('sendBtn').addEventListener('click', () => { alert('Message sent!'); });
 
-          // Active nav link
-          document.querySelectorAll('.nav-link').forEach(link => {
-            link.addEventListener('click', () => {
-              document.querySelectorAll('.nav-link').forEach(l => l.classList.remove('underline'));
-              link.classList.add('underline');
-            });
-          });
     </script>
 
 </body>
