--- a/Account.html
+++ b/Account.html
@@ -6,31 +6,21 @@
     <title>Products</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="Darkmode.js"></script>
     <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            fontFamily: {
-              'Candara': ['Candara', 'sans-serif']
-            }
-          }
+        tailwind.config = {
+            darkMode: 'class',
         }
-      }
     </script>
     <style type="text/tailwindcss">
         @layer components {
-          .mycolor {
-              background: linear-gradient(90deg, #5400FF, #8453DA);
-          }
+            .btn {
+                @apply px-6 py-3 rounded-full font-bold text-white bg-gradient-to-r from-purple-600 to-indigo-600 shadow;
+            }
 
-          .btn {
-              @apply px-6 py-3 rounded-full font-bold text-white bg-gradient-to-r from-purple-600 to-indigo-600 shadow;
-          }
-
-          .zoom {
-              @apply transition-all duration-300 ease-out hover:scale-110 hover:shadow-2xl hover:from-purple-700 hover:to-indigo-700;
-          }
+            .zoom {
+                @apply transition-all duration-300 ease-out hover:scale-110 hover:shadow-2xl hover:from-purple-700 hover:to-indigo-700;
+            }
         }
     </style>
 </head>
@@ -42,7 +32,7 @@
             <div>
                 <img src="/Images/logo.png" alt="Logo VT" class="w-[3em]">
             </div>
-
+            <!-- Search bar -->
             <div class="relative w-1/3 md-block">
                 <input type="text" placeholder="Search a product" 
                 class="w-full pl-10 pr-4 py-2 rounded-full border border-gray-300 dark:border-white-300 focus:ring-2 focus:ring-purple-500 outline-none">
@@ -52,7 +42,7 @@
             </div>
 
             <ul class="hidden md:flex space-x-8 text font-bold">
-                <li><a href="home.html" class="hover:text-purple-600">Home</a></li>
+                <li><a href="Home.html" class="hover:text-purple-600">Home</a></li>
                 <li><a href="Products.html" class="hover:text-purple-600">Products</a></li>
                 <li><a href="Service.html" class="hover:text-purple-600">Services</a></li>
                 <li><a href="Contact.html" class="hover:text-purple-600">Contact</a></li>
@@ -62,7 +52,7 @@
                 <a href="Account.html"><i class="fa-solid fa-circle-user text-2xl text-purple-600 zoom"></i></a>
             </div>
             <button id="themeToggle" class="text-xl px-3">🌓︎</button>
-
+            <!-- mobile sidebar -->
         <div id="mobileMenu"
             class="hidden lg:hidden absolute top-[64px] bg-gradient-to-br from-[#6D28D9] to-[#7C3AED] text-white rounded-2xl shadow-2xl px-8 py-6 z-50">
 
@@ -94,7 +84,7 @@
 
         <main class="flex-1">
 
-            <!-- CARD -->
+            <!-- right -->
             <section class="bg-white h-full dark:bg-gray-800 rounded-2xl p-6 max-w-5xl">
 
             <div class="flex justify-between">
@@ -104,7 +94,7 @@
                 </div>
             </div>
 
-            <!-- PROFILE -->
+            <!-- profile -->
             <div class="flex items-center gap-4 mb-8">
                 <div class="w-24 h-24 rounded-full bg-gray-300"></div>
                 <div>
@@ -112,36 +102,36 @@
                 <p class="text-sm text-gray-500 dark:text-gray-400">Phnom Penh, Cambodia</p>
                 </div>
             </div>
-            <!-- FORM -->
+
             <form class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div>
-                <label class="block text-sm text-gray-500 mb-1">First name</label>
-                <p class="w-full px-4 py-2 rounded border dark:border-gray-600 dark:bg-gray-700 bg-transparent focus:outline-none">Sor</p>
+                    <label class="block text-sm text-gray-500 mb-1">First name</label>
+                    <p class="w-full px-4 py-2 rounded border dark:border-gray-600 dark:bg-gray-700 bg-transparent focus:outline-none">Sor</p>
                 </div>
 
                 <div>
-                <label class="block text-sm text-gray-500 mb-1">Last name</label>
-                <p class="w-full px-4 py-2 rounded border dark:border-gray-600 dark:bg-gray-700 bg-transparent focus:outline-none">Channorakpitou</p>
+                    <label class="block text-sm text-gray-500 mb-1">Last name</label>
+                    <p class="w-full px-4 py-2 rounded border dark:border-gray-600 dark:bg-gray-700 bg-transparent focus:outline-none">Channorakpitou</p>
                 </div>
 
                 <div>
-                <label class="block text-sm text-gray-500 mb-1">Email address</label> 
-                <p class="w-full px-4 py-2 rounded border dark:border-gray-600 dark:bg-gray-700 bg-transparent focus:outline-none">Pitou13@gmail.com</p>
+                    <label class="block text-sm text-gray-500 mb-1">Email address</label> 
+                    <p class="w-full px-4 py-2 rounded border dark:border-gray-600 dark:bg-gray-700 bg-transparent focus:outline-none">Pitou13@gmail.com</p>
                 </div>
 
                 <div>
-                <label class="block text-sm text-gray-500 mb-1">Phone number</label>
-                <p class="w-full px-4 py-2 rounded border dark:border-gray-600 dark:bg-gray-700 bg-transparent focus:outline-none">071 772 9859</p>
+                    <label class="block text-sm text-gray-500 mb-1">Phone number</label>
+                    <p class="w-full px-4 py-2 rounded border dark:border-gray-600 dark:bg-gray-700 bg-transparent focus:outline-none">071 772 9859</p>
                 </div>
 
                 <div>
-                <label class="block text-sm text-gray-500 mb-1">Location</label>
-                <p class="w-full px-4 py-2 rounded border dark:border-gray-600 dark:bg-gray-700 bg-transparent focus:outline-none">Chak Angre Phnom Penh</p>
+                    <label class="block text-sm text-gray-500 mb-1">Location</label>
+                    <p class="w-full px-4 py-2 rounded border dark:border-gray-600 dark:bg-gray-700 bg-transparent focus:outline-none">Chak Angre Phnom Penh</p>
                 </div>
 
                 <div>
-                <label class="block text-sm text-gray-500 mb-1">Postal code</label>
-                <p class="w-full px-4 py-2 rounded border dark:border-gray-600 dark:bg-gray-700 bg-transparent focus:outline-none">019734</p>
+                    label class="block text-sm text-gray-500 mb-1">Postal code</label>
+                    <p class="w-full px-4 py-2 rounded border dark:border-gray-600 dark:bg-gray-700 bg-transparent focus:outline-none">019734</p>
                 </div>
             </form>
 
@@ -149,18 +139,11 @@
         </main>
     </div>
 
-<script>
-        const btn = document.getElementById('themeToggle');
-        btn.addEventListener('click', () => {
-            document.documentElement.classList.toggle('dark');
-            btn.textContent =
-            document.documentElement.classList.contains('dark') ? '🌓︎' : '🌓︎';
-        });
+    <script>
         function toggleMenu() {
-        document.getElementById('mobileMenu').classList.toggle('hidden');
+            document.getElementById('mobileMenu').classList.toggle('hidden');
         }
-        updateTotals();
-</script>
+    </script>
 
 </body>
 </html>
