--- a/OrderDetails.html
+++ b/OrderDetails.html
@@ -7,29 +7,24 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <script src="https://cdn.tailwindcss.com"></script>
-
+<script src="Darkmode.js"></script>
 <script>
 tailwind.config = {
-  darkMode: 'class',
-  theme: {
-    extend: {
-      fontFamily: { Candara: ['Candara','sans-serif'] }
-    }
-  }
+    darkMode: 'class',
 }
 </script>
 
 <style type="text/tailwindcss">
 @layer components {
-  .btn {
-    @apply px-6 py-3 rounded-full font-bold text-white
-    bg-gradient-to-r from-purple-600 to-indigo-600 shadow-lg;
-  }
+    .btn {
+        @apply px-6 py-3 rounded-full font-bold text-white
+        bg-gradient-to-r from-purple-600 to-indigo-600 shadow-lg;
+    }
 }
 </style>
 </head>
 
-<body class="bg-gray-100 dark:bg-gray-900 text-gray-800 font-[Candara] dark:text-gray-100">
+<body class="bg-gray-100 dark:bg-gray-900 text-[#333333] font-[Candara] dark:text-gray-100">
 <header class="w-full border-b border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700">
         <nav class="max-w-7xl mx-auto flex items-center justify-between py-2 px-6 gap-10">
             <button class="lg:hidden text-2xl" onclick="toggleMenu()">☰</button>
@@ -46,7 +41,7 @@ tailwind.config = {
             </div>
 
             <ul class="hidden md:flex space-x-8 text-lg font-bold">
-                <li><a href="home.html" class="hover:text-purple-600">Home</a></li>
+                <li><a href="Home.html" class="hover:text-purple-600">Home</a></li>
                 <li><a href="Products.html" class="hover:text-purple-600">Products</a></li>
                 <li><a href="Service.html" class="hover:text-purple-600">Services</a></li>
                 <li><a href="Contact.html" class="hover:text-purple-600">Contact</a></li>
