--- a/Cart.html
+++ b/Cart.html
@@ -76,7 +76,7 @@
         </div>
         <ul class="space-y-4 text-xl font-semibold mb-60">
                 <li class="hover:opacity-80 cursor-pointer"><a href="Products.html">Products</a></li>
-                <li class="hover:opacity-80 cursor-pointer"><a href="Cart.html">Cart</a></li>
+                <li class="opacity-80 cursor-pointer"><a href="Cart.html">Cart</a></li>
                 <li class="hover:opacity-80 cursor-pointer"><a href="Checkout.html">Check out</a></li>
                 <li class="hover:opacity-80 cursor-pointer"><a href="History.html">Order History</a></li>
                 <li class="hover:opacity-80 cursor-pointer"><a href="Account.html">My Account</a></li>
