--- a/Account.html
+++ b/Account.html
@@ -61,7 +61,7 @@
             <li class="hover:opacity-80 cursor-pointer"><a href="Cart.html">Cart</a></li>
             <li class="hover:opacity-80 cursor-pointer"><a href="Checkout.html">Check out</a></li>
             <li class="hover:opacity-80 cursor-pointer"><a href="History.html">Order History</a></li>
-            <li class="hover:opacity-80 cursor-pointer"><a href="Account.html">My Account</a></li>
+            <li class="opacity-80 cursor-pointer"><a href="Account.html">My Account</a></li>
         </ul>
         </div>
         </nav>
@@ -78,7 +78,7 @@
                     <li class="hover:opacity-80 cursor-pointer"><a href="Cart.html">Cart</a></li>
                     <li class="hover:opacity-80 cursor-pointer"><a href="Checkout.html">Check out</a></li>
                     <li class="hover:opacity-80 cursor-pointer"><a href="History.html">Order History</a></li>
-                    <li class="hover:opacity-80 cursor-pointer"><a href="#">My Account</a></li>
+                    <li class="opacity-80 cursor-pointer"><a href="Account.html">My Account</a></li>
             </ul>
         </aside>
 
@@ -96,7 +96,9 @@
 
             <!-- profile -->
             <div class="flex items-center gap-4 mb-8">
-                <div class="w-24 h-24 rounded-full bg-gray-300"></div>
+                <div class="w-24 h-24 rounded-full bg-gray-300">
+                    <img src="Images/Login/profile.png" alt="" class="rounded-full">
+                </div>
                 <div>
                 <p class="font-semibold">Sor Channorakpitou</p>
                 <p class="text-sm text-gray-500 dark:text-gray-400">Phnom Penh, Cambodia</p>
@@ -130,7 +132,7 @@
                 </div>
 
                 <div>
-                    label class="block text-sm text-gray-500 mb-1">Postal code</label>
+                    <label class="block text-sm text-gray-500 mb-1">Postal code</label>
                     <p class="w-full px-4 py-2 rounded border dark:border-gray-600 dark:bg-gray-700 bg-transparent focus:outline-none">019734</p>
                 </div>
             </form>
