--- a/Home.html
+++ b/Home.html
@@ -56,7 +56,7 @@
         <!-- Left -->
         <div class="flex flex-col justify-center items-center space-y-16">
             <h1 class="text-7xl font-bold leading-tight text-shadow-lg">The Best<br>Gaming<br>Accessories</h1>
-            <button class="btn text-white px-6 py-3 w-fit rounded-full shadow font-bold zoom">All accessories are in stock</button>
+            <button class="btn text-white px-6 py-3 w-fit rounded-full shadow font-bold zoom"><a href="Products.html">All accessories are in stock</a></button>
             <div class="flex space-x-6 text-lg">
                 <a href="#"><i class="fa-brands fa-square-whatsapp text-5xl zoom"></i></a>
                 <a href="#"><i class="fa-brands fa-square-instagram text-5xl zoom"></i></a>
