--- a/Cart.html
+++ b/Cart.html
@@ -263,7 +263,7 @@
                         </div>
                     </div>
                     </div>
-                    <button class="mt-6 w-fit self-end btn rounded">CHECKOUT ITEMS</button>
+                    <button class="mt-6 w-fit self-end btn rounded"><a href="Checkout.html">CHECKOUT ITEMS</a></button>
 
                 </div>
             </div>     
