--- a/Checkout.html
+++ b/Checkout.html
@@ -8,9 +8,16 @@
     <script src="Darkmode.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script>
-        tailwind.config = {
-            darkMode: 'class',
+      tailwind.config = {
+        darkMode: 'class',
+        theme: {
+          extend: {
+            colors: {
+              primary: '#6366f1' /* indigo-500 (you can change it) */
+            }
+          }
         }
+      }
     </script>
   <style type="text/tailwindcss">
       @layer components {
